--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
                     <h1>Asiwaju Bola Ahmed Tinubu <br> BAT</h1>
                     <p> The man called Jagaban!
                     </p>
-                    <button type="button" href="https://www.bolatinubu.com/">Sign Up</button>
+                    <a href="https://www.bolatinubu.com/"><button type="button">Sign Up</button></a>
                 </div>
                 <div class="hero-1 hero-image">
                     <img src="images/bat_display.jpg" alt="BAT">
@@ -47,8 +47,8 @@
                         <p>BAT in Ralley</p>
                     </div>
                     <div>
-                        <img src="https://twitter.com/officialABAT/status/1579549308780974081/photo/2">
-                        <p>BAT in Meeting</p>
+                        <img src="images/tinubu-and-the-people.jpg">
+                        <p>BAT & The People</p>
                     </div>
                 </div>
             </div>
@@ -58,7 +58,7 @@
                      mass transportation system, industrial development and providing life more abundant for our people"
                 </p>
                 <b>
-                    -- Anonymous Bola Ahmed Tinubu
+                    -- Asiwaju Bola Tinubu
                 </b>
             </div>
             <div class="bx sign-up">
@@ -67,7 +67,7 @@
                     <p>Sign up for the latest information right now!</p>
                 </div>
                 <div class="sign-item signs-button">
-                    <button type="button" href="https://www.bolatinubu.com/">Sign Up</button>
+                    <a href="https://www.bolatinubu.com/"><button type="button">Sign Up</button></a>
                 </div>
             </div>
             <div class="bx footer">
